unpackaged/main/default/objects/Opportunity_Offer__c/Opportunity_Offer__c.object-meta.xml
<CustomObject>
    <label>Opportunity Offer</label>
    <nameField>
        <label>Opportunity Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>