unpackaged/main/default/objects/Opportunity_Offer__c/fields/Acoustic__c.field-meta.xml
<CustomField>
    <fullName>Acoustic__c</fullName>
    <label>Acoustic</label>
    <type>TextArea</type>
</CustomField>