unpackaged/main/default/objects/Opportunity_Offer__c/fields/Acoustic_Report__c.field-meta.xml
<CustomField>
    <fullName>Acoustic_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acoustic Report</label>
    <type>Checkbox</type>
</CustomField>