unpackaged/main/default/objects/Opportunity_Offer__c/fields/Additional_Acoustic_Thermal_Insulation__c.field-meta.xml
<CustomField>
    <fullName>Additional_Acoustic_Thermal_Insulation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Acoustic / Thermal Insulation</label>
    <type>Checkbox</type>
</CustomField>