unpackaged/main/default/objects/Opportunity_Offer__c/fields/Additional_Note_Balustrading__c.field-meta.xml
<CustomField>
    <fullName>Additional_Note_Balustrading__c</fullName>
    <label>Additional Note</label>
    <type>TextArea</type>
</CustomField>