unpackaged/main/default/objects/Opportunity_Offer__c/fields/Additional_Note_Insulation_Only__c.field-meta.xml
<CustomField>
    <fullName>Additional_Note_Insulation_Only__c</fullName>
    <label>Additional Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>