unpackaged/main/default/objects/Opportunity_Offer__c/fields/Additional_Note_Tactile_Only__c.field-meta.xml
<CustomField>
    <fullName>Additional_Note_Tactile_Only__c</fullName>
    <label>Additional Note Tactile Only</label>
    <type>TextArea</type>
</CustomField>