unpackaged/main/default/objects/Opportunity_Offer__c/fields/Additional_Notes_Garage__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes_Garage__c</fullName>
    <label>Additional Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>