unpackaged/main/default/objects/Opportunity_Offer__c/fields/Additional_Notes_Windows__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes_Windows__c</fullName>
    <label>Additional Notes</label>
    <type>TextArea</type>
</CustomField>