unpackaged/main/default/objects/Opportunity_Offer__c/fields/Additional_Remotes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Remotes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Remotes</label>
    <type>Checkbox</type>
</CustomField>