unpackaged/main/default/objects/Opportunity_Offer__c/fields/Adjustable_Shelving_Unit__c.field-meta.xml
<CustomField>
    <fullName>Adjustable_Shelving_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adjustable Shelving Unit</label>
    <type>Checkbox</type>
</CustomField>