unpackaged/main/default/objects/Opportunity_Offer__c/fields/Alfresco__c.field-meta.xml
<CustomField>
    <fullName>Alfresco__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alfresco</label>
    <type>Checkbox</type>
</CustomField>