unpackaged/main/default/objects/Opportunity_Offer__c/fields/Alfresco_Battens_Other__c.field-meta.xml
<CustomField>
    <fullName>Alfresco_Battens_Other__c</fullName>
    <label>Alfresco Battens - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>