unpackaged/main/default/objects/Opportunity_Offer__c/fields/Alfresco_Board_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Alfresco_Board_Type_Other__c</fullName>
    <label>Alfresco Board Type - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>