unpackaged/main/default/objects/Opportunity_Offer__c/fields/Aluminium_Frame_Colour__c.field-meta.xml
<CustomField>
    <fullName>Aluminium_Frame_Colour__c</fullName>
    <label>Aluminium Frame Colour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chrome</fullName>
            </value>
            <value>
                <fullName>Matte Black</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>