unpackaged/main/default/objects/Opportunity_Offer__c/fields/Anti_Graffiti__c.field-meta.xml
<CustomField>
    <fullName>Anti_Graffiti__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anti-Graffiti</label>
    <type>Checkbox</type>
</CustomField>