unpackaged/main/default/objects/Opportunity_Offer__c/fields/Architectural_Drawings__c.field-meta.xml
<CustomField>
    <fullName>Architectural_Drawings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Architectural Drawings</label>
    <type>Checkbox</type>
</CustomField>