unpackaged/main/default/objects/Opportunity_Offer__c/fields/Asset_Protection__c.field-meta.xml
<CustomField>
    <fullName>Asset_Protection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asset Protection</label>
    <type>Checkbox</type>
</CustomField>