unpackaged/main/default/objects/Opportunity_Offer__c/fields/Bal_Rating__c.field-meta.xml
<CustomField>
    <fullName>Bal_Rating__c</fullName>
    <label>Bal Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>12.5</fullName>
            </value>
            <value>
                <fullName>19</fullName>
            </value>
            <value>
                <fullName>29</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>