unpackaged/main/default/objects/Opportunity_Offer__c/fields/BAL_requirements__c.field-meta.xml
<CustomField>
    <fullName>BAL_requirements__c</fullName>
    <label>BAL requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BAL12.5</fullName>
            </value>
            <value>
                <fullName>BAL19</fullName>
            </value>
            <value>
                <fullName>BAL29</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>