unpackaged/main/default/objects/Opportunity_Offer__c/fields/Balconies__c.field-meta.xml
<CustomField>
    <fullName>Balconies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Balconies</label>
    <type>Checkbox</type>
</CustomField>