unpackaged/main/default/objects/Opportunity_Offer__c/fields/Balcony_Battens__c.field-meta.xml
<CustomField>
    <fullName>Balcony_Battens__c</fullName>
    <label>Balcony Battens</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Battens Required</fullName>
            </value>
            <value>
                <fullName>Direct Fix to Truss</fullName>
            </value>
            <value>
                <fullName>Laser Level on Clips</fullName>
            </value>
            <value>
                <fullName>Cornice by CSR</fullName>
            </value>
            <value>
                <fullName>Furring Channel</fullName>
            </value>
            <value>
                <fullName>Other - Please Specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>