unpackaged/main/default/objects/Opportunity_Offer__c/fields/Balcony_Battens_Other__c.field-meta.xml
<CustomField>
    <fullName>Balcony_Battens_Other__c</fullName>
    <label>Balcony Battens - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>