unpackaged/main/default/objects/Opportunity_Offer__c/fields/Balcony_Board_Type__c.field-meta.xml
<CustomField>
    <fullName>Balcony_Board_Type__c</fullName>
    <label>Balcony Board Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aquachek 10mm</fullName>
            </value>
            <value>
                <fullName>Aquachek 13mm</fullName>
            </value>
            <value>
                <fullName>Supaceil 10mm</fullName>
            </value>
            <value>
                <fullName>Wallboard 6mm</fullName>
            </value>
            <value>
                <fullName>Other - Please Specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>