unpackaged/main/default/objects/Opportunity_Offer__c/fields/Balcony_Board_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Balcony_Board_Type_Other__c</fullName>
    <label>Balcony Board Type - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>