unpackaged/main/default/objects/Opportunity_Offer__c/fields/Balcony_Same_as_Alfresco__c.field-meta.xml
<CustomField>
    <fullName>Balcony_Same_as_Alfresco__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Balcony Same as Alfresco?</label>
    <type>Checkbox</type>
</CustomField>