unpackaged/main/default/objects/Opportunity_Offer__c/fields/Balcony_Trim__c.field-meta.xml
<CustomField>
    <fullName>Balcony_Trim__c</fullName>
    <label>Trim</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>By Builder</fullName>
            </value>
            <value>
                <fullName>As Per Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>