unpackaged/main/default/objects/Opportunity_Offer__c/fields/Board_Location__c.field-meta.xml
<CustomField>
    <fullName>Board_Location__c</fullName>
    <label>Board Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>