unpackaged/main/default/objects/Opportunity_Offer__c/fields/Braille_Signs__c.field-meta.xml
<CustomField>
    <fullName>Braille_Signs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Braille Signs</label>
    <type>Checkbox</type>
</CustomField>