unpackaged/main/default/objects/Opportunity_Offer__c/fields/Brush_Seals__c.field-meta.xml
<CustomField>
    <fullName>Brush_Seals__c</fullName>
    <label>Brush Seals</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>BAL 12.5 Available for Steel and Aluminium Sectional Doors</fullName>
            </value>
            <value>
                <fullName>BAL 19 (Not Available For Aluminium Sectional Doors)</fullName>
            </value>
            <value>
                <fullName>BAL 29 (Not Available For Aluminium Sectional Doors)</fullName>
            </value>
            <value>
                <fullName>BAL 40 (Not Available For Aluminium Sectional Doors)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>