unpackaged/main/default/objects/Opportunity_Offer__c/fields/Building_Entrances_Lobbies__c.field-meta.xml
<CustomField>
    <fullName>Building_Entrances_Lobbies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Building Entrances / Lobbies</label>
    <type>Checkbox</type>
</CustomField>