unpackaged/main/default/objects/Opportunity_Offer__c/fields/Building_Substrate_s_for_rendering__c.field-meta.xml
<CustomField>
    <fullName>Building_Substrate_s_for_rendering__c</fullName>
    <label>Building Substrate(s) for rendering</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EPS cavity</fullName>
            </value>
            <value>
                <fullName>EPS Direct Fix</fullName>
            </value>
            <value>
                <fullName>FC Recessed</fullName>
            </value>
            <value>
                <fullName>FC Expressed</fullName>
            </value>
            <value>
                <fullName>Brick/Block work</fullName>
            </value>
            <value>
                <fullName>AAC/Hebel</fullName>
            </value>
            <value>
                <fullName>MgO</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Combination of the above</fullName>
            </value>
            <value>
                <fullName>EPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>