unpackaged/main/default/objects/Opportunity_Offer__c/fields/Building_Type__c.field-meta.xml
<CustomField>
    <fullName>Building_Type__c</fullName>
    <label>Building Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weatherboard</fullName>
            </value>
            <value>
                <fullName>Brick Veneer</fullName>
            </value>
            <value>
                <fullName>Solid Brick</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>