unpackaged/main/default/objects/Opportunity_Offer__c/fields/Building_Type_Storey__c.field-meta.xml
<CustomField>
    <fullName>Building_Type_Storey__c</fullName>
    <label>Building Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Story</fullName>
            </value>
            <value>
                <fullName>Double Story</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>