unpackaged/main/default/objects/Opportunity_Offer__c/fields/Car_Park_Fixtures__c.field-meta.xml
<CustomField>
    <fullName>Car_Park_Fixtures__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Car Park Fixtures</label>
    <type>Checkbox</type>
</CustomField>