unpackaged/main/default/objects/Opportunity_Offer__c/fields/Car_parks__c.field-meta.xml
<CustomField>
    <fullName>Car_parks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Car parks</label>
    <type>Checkbox</type>
</CustomField>