unpackaged/main/default/objects/Opportunity_Offer__c/fields/Carpet__c.field-meta.xml
<CustomField>
    <fullName>Carpet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carpet</label>
    <type>Checkbox</type>
</CustomField>