unpackaged/main/default/objects/Opportunity_Offer__c/fields/Ceiling_Heights_d_stairs_Other__c.field-meta.xml
<CustomField>
    <fullName>Ceiling_Heights_d_stairs_Other__c</fullName>
    <label>Ceiling Heights d/stairs Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>