unpackaged/main/default/objects/Opportunity_Offer__c/fields/Ceiling_Heights_u_stairs__c.field-meta.xml
<CustomField>
    <fullName>Ceiling_Heights_u_stairs__c</fullName>
    <label>Ceiling Heights u/stairs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2.40m</fullName>
            </value>
            <value>
                <fullName>2.50m</fullName>
            </value>
            <value>
                <fullName>2.70m</fullName>
            </value>
            <value>
                <fullName>3.00m</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>