unpackaged/main/default/objects/Opportunity_Offer__c/fields/Ceiling_Insulation__c.field-meta.xml
<CustomField>
    <fullName>Ceiling_Insulation__c</fullName>
    <label>Ceiling Insulation</label>
    <type>TextArea</type>
</CustomField>