unpackaged/main/default/objects/Opportunity_Offer__c/fields/Ceiling_Insulation_CB__c.field-meta.xml
<CustomField>
    <fullName>Ceiling_Insulation_CB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ceiling Insulation</label>
    <type>Checkbox</type>
</CustomField>