unpackaged/main/default/objects/Opportunity_Offer__c/fields/Choose_from_Modules_guide__c.field-meta.xml
<CustomField>
    <fullName>Choose_from_Modules_guide__c</fullName>
    <label>Choose from Modules guide</label>
    <length>20</length>
    <type>Text</type>
</CustomField>