unpackaged/main/default/objects/Opportunity_Offer__c/fields/Cladding__c.field-meta.xml
<CustomField>
    <fullName>Cladding__c</fullName>
    <label>Cladding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Whole Project</fullName>
            </value>
            <value>
                <fullName>Sections Mentioned in Comments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>