unpackaged/main/default/objects/Opportunity_Offer__c/fields/Cladding_Comment__c.field-meta.xml
<CustomField>
    <fullName>Cladding_Comment__c</fullName>
    <label>Cladding Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>