unpackaged/main/default/objects/Opportunity_Offer__c/fields/Cladding_Dulux_Exsulite__c.field-meta.xml
<CustomField>
    <fullName>Cladding_Dulux_Exsulite__c</fullName>
    <label>Cladding - Dulux Exsulite</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exsulite Cavity System</fullName>
            </value>
            <value>
                <fullName>Exsulite Non-Cavity System</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Yes - Exsulite Cavity System</fullName>
                <isActive>false</isActive>
                <label>Yes - Exsulite Cavity System</label>
            </value>
            <value>
                <fullName>Yes - Exsulite Non-Cavity System</fullName>
                <isActive>false</isActive>
                <label>Yes - Exsulite Non-Cavity System</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>