unpackaged/main/default/objects/Opportunity_Offer__c/fields/Colour__c.field-meta.xml
<CustomField>
    <fullName>Colour__c</fullName>
    <label>Colour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Colourbond Standard (Sectional Steel / Roller Door)</fullName>
            </value>
            <value>
                <fullName>Unitcote Lux (Sectional Steel / Roller Door)</fullName>
            </value>
            <value>
                <fullName>Premium Colours (Sectional - Steel)</fullName>
            </value>
            <value>
                <fullName>Decowood (Sectional - Steel)</fullName>
            </value>
            <value>
                <fullName>Matt Finish (Sectional Steel / Roller Door)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>