unpackaged/main/default/objects/Opportunity_Offer__c/fields/Colour_Finish_Specific__c.field-meta.xml
<CustomField>
    <fullName>Colour_Finish_Specific__c</fullName>
    <label>Colour/Finish Specific</label>
    <length>255</length>
    <type>Text</type>
</CustomField>