unpackaged/main/default/objects/Opportunity_Offer__c/fields/Colour_of_EAC_unit__c.field-meta.xml
<CustomField>
    <fullName>Colour_of_EAC_unit__c</fullName>
    <label>Colour of EAC unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grey</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Beige</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>