unpackaged/main/default/objects/Opportunity_Offer__c/fields/Colour_Other__c.field-meta.xml
<CustomField>
    <fullName>Colour_Other__c</fullName>
    <label>Colour - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>