unpackaged/main/default/objects/Opportunity_Offer__c/fields/Colours__c.field-meta.xml
<CustomField>
    <fullName>Colours__c</fullName>
    <label>Colours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2000mm Height - Chrome</fullName>
            </value>
            <value>
                <fullName>1950mm Height - Matte black</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>