unpackaged/main/default/objects/Opportunity_Offer__c/fields/Concrete_Decks_Multi_level_Carparks__c.field-meta.xml
<CustomField>
    <fullName>Concrete_Decks_Multi_level_Carparks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concrete Decks Multi level Carparks</label>
    <type>Checkbox</type>
</CustomField>