unpackaged/main/default/objects/Opportunity_Offer__c/fields/Cornice__c.field-meta.xml
<CustomField>
    <fullName>Cornice__c</fullName>
    <label>Cornice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Square-set</fullName>
            </value>
            <value>
                <fullName>Cove</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>