unpackaged/main/default/objects/Opportunity_Offer__c/fields/Cornice_Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Cornice_Additional_Notes__c</fullName>
    <label>Cornice Additional Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>