unpackaged/main/default/objects/Opportunity_Offer__c/fields/Cornice_Sub_Selection__c.field-meta.xml
<CustomField>
    <fullName>Cornice_Sub_Selection__c</fullName>
    <label>Cornice Sub Selection</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cornice__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paper Tape</fullName>
            </value>
            <value>
                <fullName>Perfect Angle</fullName>
            </value>
            <value>
                <fullName>55mm Cove</fullName>
            </value>
            <value>
                <fullName>75mm Cove</fullName>
            </value>
            <value>
                <fullName>90mm Cove</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>As per plan or notes</fullName>
                <isActive>false</isActive>
                <label>As per plan or notes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>