unpackaged/main/default/objects/Opportunity_Offer__c/fields/Cornice_Sub_Selection_Other__c.field-meta.xml
<CustomField>
    <fullName>Cornice_Sub_Selection_Other__c</fullName>
    <label>Cornice Sub Selection Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>