unpackaged/main/default/objects/Opportunity_Offer__c/fields/Door_Material__c.field-meta.xml
<CustomField>
    <fullName>Door_Material__c</fullName>
    <label>Door Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>9mm White melamine</fullName>
            </value>
            <value>
                <fullName>Silver mirror</fullName>
            </value>
            <value>
                <fullName>White glass</fullName>
            </value>
            <value>
                <fullName>Onyx grey/black mirror</fullName>
            </value>
            <value>
                <fullName>Other specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>