unpackaged/main/default/objects/Opportunity_Offer__c/fields/Door_Type__c.field-meta.xml
<CustomField>
    <fullName>Door_Type__c</fullName>
    <label>Door Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Garage_Door_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aluminium Sectional Door</fullName>
            </value>
            <value>
                <fullName>Aluminium Roller Shutter</fullName>
            </value>
            <value>
                <fullName>Grilles</fullName>
            </value>
            <value>
                <fullName>Steel Roller Shutte</fullName>
            </value>
            <value>
                <fullName>Sectional Door - Standard (Steel)</fullName>
            </value>
            <value>
                <fullName>Sectional Door -Aluminium</fullName>
            </value>
            <value>
                <fullName>Roller Door  (Steel)</fullName>
            </value>
            <value>
                <fullName>Special Tilt Door (Excluding WA)</fullName>
            </value>
            <value>
                <fullName>Special Timber door</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>