unpackaged/main/default/objects/Opportunity_Offer__c/fields/Driveways__c.field-meta.xml
<CustomField>
    <fullName>Driveways__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Driveways</label>
    <type>Checkbox</type>
</CustomField>